--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pafy==0.5.5
 pyaes==1.6.1
 Pyrogram==1.3.5
 PySocks==1.7.1
+pyTelegramBotAPI==4.3.1
 requests==2.27.1
 rfc3986==1.5.0
 sniffio==1.2.0
@@ -17,4 +18,5 @@ soupsieve==2.3.1
 TgCrypto==1.2.3
 urllib3==1.26.8
 wikipedia==1.4.0
+youtube-dl==2021.12.17
 youtube-search-python==1.5.3
