--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.10.0
 certifi==2021.10.8
 charset-normalizer==2.0.10
 h11==0.12.0
+hashids==1.3.1
 httpcore==0.14.4
 httpx==0.21.3
 idna==3.3
