--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,17 @@ beautifulsoup4==4.10.0
 certifi==2021.10.8
 charset-normalizer==2.0.10
 h11==0.12.0
+hashids==1.3.1
 httpcore==0.14.5
 httpx==0.21.3
 idna==3.3
 pyaes==1.6.1
+pyasn1==0.4.8
 Pyrogram==1.3.6
 PySocks==1.7.1
 requests==2.27.1
 rfc3986==1.5.0
+rsa==4.8
 sniffio==1.2.0
 soupsieve==2.3.1
 TgCrypto==1.2.3
